// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewMenu Render 1`] = `null`;

exports[`ViewMenu Render 2`] = `
<div
  className="view-menu"
>
  <div
    className="dropdown disabled btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={true}
      id="view-menu-drop-model"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Grid Views
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="view-menu-drop-model"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    />
  </div>
</div>
`;

exports[`ViewMenu Render 3`] = `
<div
  className="view-menu"
>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="view-menu-drop-model"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Grid Views
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="view-menu-drop-model"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Default
        </a>
      </li>
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        All Saved Views
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          No Extra Column
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          No Mixtures or Extra
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ViewMenu Render 4`] = `
<div
  className="view-menu"
>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="view-menu-drop-model"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Grid Views
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="view-menu-drop-model"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Default
        </a>
      </li>
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        My Saved Views
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          No Extra Column
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ViewMenu Render 5`] = `
<div
  className="view-menu"
>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="view-menu-drop-model"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Grid Views
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="view-menu-drop-model"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Default
        </a>
      </li>
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        My Saved Views
      </li>
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          No Extra Column
        </a>
      </li>
    </ul>
  </div>
</div>
`;
